# rust-birdnet-onnx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  clippy.toml  deny.toml  rustfmt.toml
.githooks/: pre-commit  pre-push
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  claude-review.yml  coverage.yml  docs.yml  release.yml  security.yml  stale.yml
data/labels/perch_v2/: perch_v2_ebird_classes.csv
docs/: gpu-batch-optimization.md  test-coverage-implementation-summary.md
examples/: classifier_provider_detection.rs  execution_provider_query.rs
scripts/: README.md  debug_batching.ps1
src/: batch_context.rs  classifier.rs  cuda_config.rs  detection.rs  error.rs  execution_providers.rs  inference_options.rs  labels.rs  lib.rs  postprocess.rs  rangefilter.rs  runtime.rs  tensorrt_config.rs  testutil.rs  types.rs
tests/: README.md  execution_provider_test.rs  integration_test.rs
